docker support (it actually works now)

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,18 @@
 
 @string{aps = {American Physical Society,}}
 
+@misc{atanov2024solvingvisiontaskssimple,
+      title={Solving Vision Tasks with Simple Photoreceptors Instead of Cameras}, 
+      author={Atanov, Andrei and Jiawei Fu and Rishubh Singh and Isabella Yu and Andrew Spielberg and Amir Zamir},
+      year={2024},
+      eprint={2406.11769},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2406.11769}, 
+      html={https://arxiv.org/abs/2406.11769},
+      preview={pr_v_cam.png}
+}
+
 @book{einstein1920relativity,
   title={Relativity: the Special and General Theory},
   author={Einstein, Albert},
