--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,7 @@
 @article{atanov2024solvingvisiontaskssimple,
       title={Solving Vision Tasks with Simple Photoreceptors Instead of Cameras}, 
       author={Atanov, Andrei and Jiawei Fu and Rishubh Singh and Isabella Yu and Andrew Spielberg and Amir Zamir},
+      journal={ECCV},
       year={2024},
       eprint={2406.11769},
       archivePrefix={arXiv},
@@ -12,4 +13,15 @@
       html={https://visual-morphology.epfl.ch},
       selected={true},
       preview={pr_v_cam.png}
+}
+
+@article{jenga,
+      title={Jenga as a Performance Art: Computational Generation of Surprisingly Stable Structures}, 
+      author={Isabella Yu* and Kristine Zheng*},
+      journal={MIT URTC},
+      year={2023},
+      primaryClass={cs.CV},
+      pdf={MIT_URTC_2023_poster.pdf},
+      selected={true},
+      preview={mh.png}
 }
