--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 
 @article{atanov2024solvingvisiontaskssimple,
-      title={Solving Vision Tasks with Simple Photoreceptors Instead of Cameras}, 
+      title={How Far Can a 1-Pixel Camera Go? Solving Vision Tasks with Simple Photoreceptors Instead of Cameras}, 
       author={Atanov, Andrei and Jiawei Fu and Rishubh Singh and Isabella Yu and Andrew Spielberg and Amir Zamir},
       journal={ECCV},
       year={2024},
