--- a/papers.bib
+++ b/papers.bib
@@ -13,7 +13,7 @@
 
 @article{atanov2024solvingvisiontaskssimple,
       title={How Far Can a 1-Pixel Camera Go? Solving Vision Tasks with Simple Photoreceptors Instead of Cameras}, 
-      author={Atanov, Andrei and Jiawei Fu and Rishubh Singh and Isabella Yu and Andrew Spielberg and Amir Zamir},
+      author={Andrei Atanov* and Jiawei Fu* and Rishubh Singh* and Isabella Yu and Andrew Spielberg and Amir Zamir},
       journal={ECCV},
       year={2024},
       eprint={2406.11769},
