--- a/papers.bib
+++ b/papers.bib
@@ -27,7 +27,7 @@
 
 @article{jenga,
       title={Jenga as a Performance Art: Computational Generation of Surprisingly Stable Structures}, 
-      author={Isabella Yu* and Kristine Zheng*},
+      author={Kristine Zheng* and Isabella Yu*},
       journal={MIT URTC},
       year={2023},
       primaryClass={cs.CV},
